fix: Use of semi bold in home cards for better legibility

--- a/static/css/global.css
+++ b/static/css/global.css
@@ -363,6 +363,7 @@ header h1 a img {
 #want-to-help .subtitle {
   background: none;
   font-size: 0.875rem;
+  font-family: "muli-semibold", sans-serif;
   margin-top: initial;
 }
 
